--- a/hit-the-books-project/index.html
+++ b/hit-the-books-project/index.html
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hit The Books</title>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+
 </head>
 <body>
-    <h1>Teste</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi delectus eum corporis harum voluptatibus iste? Odit itaque, expedita possimus, culpa soluta nisi quasi porro, quibusdam reprehenderit magni et. Ad, harum?
+
+    <div id="interface">
+        <!--Início do cabeçalho-->
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Hit The Books English School</h1>
+                <h2>"Learning is either a continuing thing or it is nothing" 
+                    - Frank Tyger
+                </h2>
+            </hgroup>
+
+            <figure class="logo-header">
+                <img id="icone" src="_image/logo-hit-the-books-v2.png" width="300"/>
+                <figcaption>
+                    <h3>Hit the Books</h3>
+                    <p>Inglês online e gratuito. Conteúdo grátis para o aprendizado de idiomas.</p>
+                </figcaption>
+            </figure>
+
+        </header>
+    
+        <!--Fim do cabeçalho-->
+    <!--Início do menu de navegação-->    
+    <nav id="menu">
+        <h1>Menu Principal</h1>
+        <ul type="disc">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="plano-de-estudos.html">Plano de Estudos</a></li>
+            <li><a href="dicas.html">Dicas de Blogs e Recursos</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>        
+    </nav>
+    <!--Fim do menu de navegação--> 
+    <h3>Aprenda Inglês Sozinho!</h3>
+    <p>
+        É completamente possível aprender inglês sozinho, utilizando blogs e páginas gratuítas na Internet. A escrita, o audio e a conversação na língua inglesa podem ser aprendidos e exercitados a partir de jogos, textos, podcasts, videos no Youtube e músicas que ensinam o idioma. Existem diversas formas e técnicas para praticar, estudar e aumentar a sua proficiência em qualquer idioma, tudo isso online, de forma gratuita e sem sair de casa.
     </p>
+    <figure class="foto-legenda">
+        <img src="_image/banner-open-book-menor.jpg" width="300px"/>
+        <figcaption>
+            <h3>Hit the Books</h3>
+            <p>Inglês online e gratuito. Conteúdo grátis para o aprendizado de idiomas.</p>
+        </figcaption>
+    </figure>
+    
+    <hgroup>
+        <h3>Cronograma de Estudos</h3>
+        <h4>Ordem Cronológica</h4>
+    </hgroup>
+
+    <h5>Basic 1 - Simple Present</h5>
+    <p><em><span style="font-weight: bolder;">Personal and professional presentation:</span></em> 
+    </p>
+    <p>Personal Pronouns; Verb To Be; Verb to have; phrases on affirmative, negative and interrogative; basic adjectives; talk about feelings, physical appearance, routine with other basic verbs; 3rd person of singular; professions, nationality, time, days of the week, months, seasons, numbers, family members, fruits, clothes and colors; demonstrative, adjective and possessive pronouns; possessive with ‘s; do and does; Question words; Present Continuous; basic prepositions; plural of nouns,; articles; basic intensifiers; quantifiers; modals(can, could, would); 
+    </p>
+
+    <h5>Basic 2 - Simple Past </h5>
+    <p><em><span style="font-weight: bolder;"> Personal and professional presentation in the past:</span></em> 
+    </p>
+    <p>Talk about yourself and routine in the past; regular and Irregular Verbs; did; tag questions; Past Continuous; idioms; Furniture and office vocabulary; false cognates; modals( ; time expressions; whether; hobbies; Indefinite Pronouns; directions; if clause; Parts of the Body; Health & Diseases; 
+    </p>
+
+    Copyright&copy; 2020 - by Kátia Reis
+    Facebook
+    </div>
 </body>
 </html>
