--- a/katia-reis-project/index.html
+++ b/katia-reis-project/index.html
@@ -7,16 +7,22 @@
 </head>
 <body>
     <header>
-        <h1>Kátia Reis</h1>
+        <h1>Kátia Reis</h1> <!-- Boas práticas-Usar somente um h1 na página -->
+        <p>
+            <a href="https://www.linkedin.com/in/katia-r-0528092b/" target="_blank">LinkedIn Profile</a><br>
+            <a href="mailto:reis.katia86@gmail.com" target="_blank">Contato por e-mail</a>
+        </p>
     </header>
     <section>
         <header>
-            <h2>Posts</h2>
+            <h2>Posts</h2> <!-- Boas práticas-Usar h2 como título de seção -->
         </header>
         <article>
             <header>
-                <h3>Post #1</h3>
+                <h3>Post #1</h3> <!-- Boas práticas-Usar h3 como título de artigos -->
             </header>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sequi sunt asperiores, et harum unde doloremque fugiat delectus? Vitae nam sed, delectus dicta exercitationem accusantium blanditiis nobis eveniet in modi!
+                <!-- Boas práticas-Usar <p> para textos em parágrafos --> </p>
         </article>
         <footer></footer>
     </section>
