--- a/katia-reis-project/index.html
+++ b/katia-reis-project/index.html
@@ -9,8 +9,9 @@
     <header>
         <h1>Kátia Reis</h1> <!-- Boas práticas-Usar somente um h1 na página -->
         <p>
+            Estudante de Eng. da Computação na Univesp. Web Dev Girl - Conhecimento intermediário em HTML, CSS, Javascript e Python.<br>
             <a href="https://www.linkedin.com/in/katia-r-0528092b/" target="_blank">LinkedIn Profile</a><br>
-            <a href="mailto:reis.katia86@gmail.com" target="_blank">Contato por e-mail</a>
+            <a href="mailto:reis.katia86@gmail.com" target="_blank">Contato por e-mail</a><br>            
         </p>
     </header>
     <section>
