Add ul and links
Adicionando links e listas à página HTML.

--- a/katia-reis-project/index.html
+++ b/katia-reis-project/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <img src="_images\katia-reis.jpg" alt="Foto do rosto de Kátia Reis" width="200">
         <h1>Kátia Reis</h1> <!-- Boas práticas-Usar somente um h1 na página -->
         <p>
             Estudante de Eng. da Computação na Univesp. Web Dev Girl - Conhecimento intermediário em HTML, CSS, Javascript e Python.<br>
@@ -17,6 +18,7 @@
     <section>
         <header>
             <h2>Posts</h2> <!-- Boas práticas-Usar h2 como título de seção -->
+            <img src="_images\html-code-image.jpg" alt="Imagem de Editor de texto contendo código HTML" width=" 600">
         </header>
         <article>
             <header>
@@ -25,7 +27,19 @@
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sequi sunt asperiores, et harum unde doloremque fugiat delectus? Vitae nam sed, delectus dicta exercitationem accusantium blanditiis nobis eveniet in modi!
                 <!-- Boas práticas-Usar <p> para textos em parágrafos --> </p>
         </article>
-        <footer></footer>
+        <footer>
+            <ul>
+                <li>
+                    <a href="mailto:reis.katia86@gmail.com">reis.katia86@gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/katia-r-0528092b/" target="_blank">LinkedIn Profile"</a>
+                </li>
+                <li>
+                    <a href="https://github.com/katiareis" target="_blank">Github</a>
+                </li>
+            </ul>
+        </footer>
     </section>
 </body>
 </html>
