Finalizando o Projeto - Media queries
Inserindo CSS e media queries

--- a/intagram-landing-page/index.html
+++ b/intagram-landing-page/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="instragram-wrapper"><!-- Container Principal-->
+    <div class="instragram-wrapper"><!-- Container Principal (flexcontainer)-->
         <div class="instagram-phone"> <!-- Container Secundário (flex item 1)-->
             <img src="images/mobile-instagram2.PNG" alt="imagem de celular">
         </div>
         <div class="instagram-continue"> <!-- Container Secundário (flex item 2)-->
-            <div class="group">
+            <div class="group"> <!-- Dentro desta div estão os flex items da direita-->
                 <img src="images/instagram-logo.png" class="instagram-logo" alt="Instagram logo">
                 <div class="profile-photo">
                     <img src="images/profile-picture.jpg" alt="foto de perfil">
@@ -20,7 +20,7 @@
                 <a href="#" class="instagram-login">Continuar como reiskatia86</a><!-- Botão 1 -->
                 <a href="#" class="instagram-logout">Trocar de conta</a><!-- Botão 2 -->
             </div>
-            <div class="group">
+            <div class="group"> <!-- Dentro desta div estão os itens de texto da direita-->
                 <p class="not-account">Não é reiskatia86?</p>
                 <p class="not-account">
                     <span class="link-blue">Alternar contas</span>
@@ -28,8 +28,8 @@
                     <span class="link-blue">Inscreva-se</span>
                 </p>
             </div>
-            <div class="get-the-app">
-                <p class="get-app">Baixe o app</p>
+            <div class="get-the-app"> <!-- Dentro desta div estão os botões de download-->
+                <p class="get-app"><strong>Baixe o app</strong></p>
                 <div class="download">
                     <a href="#" class="app-download"></a>
                     <a href="#" class="app-download"></a>
