Recriando a Interface do Netflix
Recriando a interface do principal site de streaming mundial utilizando tecnologias simples como HTML5, CSS3 e JavaScript. Nesse projeto: como estruturar um layout, técnicas de CSS3 com containers e variáveis, como posicionar os elementos com Flexbox e como utilizar plugins Jquery a favor da aplicação.

--- a/netflix-interface-clone/index.html
+++ b/netflix-interface-clone/index.html
@@ -31,18 +31,25 @@
     <main>
         <div class="filme-principal">
             <div class="container">
-                <h3 class="titulo">HOUSE OF CARDS</h3>
-                <p class="descricao">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste drama vencedor do Emmy e do Globo de Ouro. Assista agora a nova temporada que está imperdível.
+                <h2 class="titulo-image"><img src="img/netflix-n-logo.png" alt="Netflix Logo" srcset="" style="width:50%;height:50%;">
+                </h2>
+                <h3 class="titulo">House of Cards</h3>
+                <p>2013 | 18 | 6 temporadas | Séries dramáticas</p>
+                <p class="descricao">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste drama vencedor do Emmy e do Globo de Ouro. Assista agora a nova temporada que está imperdível.<br><br>
+                <strong>Estrelando:</strong> Robin Wright, Michael Kelly, Diane Lane<br>
+                <strong>Criação:</strong> Beau Willimon
                 </p>
                 <div class="botoes">
+                    <a href="https://www.netflix.com/br/title/70178217" target="_blank">
                     <button role="button" class="botao"> <!-- Para garantir que o botão redenrize corretamente, foi inserido a propriedade role, que marca a função do botão -->
                         <i class="fas fa-play"></i> <!-- Ícones de play e info (referenciados pelo site fontawesome.com)-->
                         ASSISTIR AGORA
-                    </button>
+                    </button></a>
+                    <a href="https://pt.wikipedia.org/wiki/House_of_Cards_(s%C3%A9rie_americana)" target="_blank">
                     <button role="button" class="botao">
                         <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
-                    </button>
+                    </button></a>
                 </div>
             </div>
         </div>
@@ -51,33 +58,53 @@
     <div class="carrossel-filmes">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img class="box-filmes" src="img/mini1.jpg" alt="The Umbrella Academy" srcset="">
+                <a href="https://www.youtube.com/watch?v=0DAmWHxeoKw&ab_channel=Netflix" target="_blank">
+                <img class="box-filmes" src="img/mini1.jpg" alt="The Umbrella Academy Movie Poster" srcset="">
+                </a>
             </div>
             <div class="item">
+                <a href="https://www.youtube.com/watch?v=W0squnw6Jp8&ab_channel=Ingresso.com" target="_blank">
                 <img class="box-filmes" src="img/mini2.jpg" alt="Star Wars" srcset="">
+                </a>
             </div>
             <div class="item">
-                <img class="box-filmes" src="img/mini3.jpg" alt="Pokemon" srcset="">
+                <a href="https://www.youtube.com/watch?v=mOzp9zGLgic&ab_channel=ONEMedia" target="_blank">
+                <img class="box-filmes" src="img/mini3.jpg" alt="Pokemon Movie Poster" srcset="">
+                </a>
             </div>
             <div class="item">
-                <img class="box-filmes" src="img/mini4.jpg" alt="Guerra Civil" srcset="">
+                <a href="https://www.youtube.com/watch?v=FRLYZn5PGuA&ab_channel=MarvelBrasil" target="_blank">
+                <img class="box-filmes" src="img/mini4.jpg" alt="Capitão América - Guerra Civil Movie Poster" srcset="">
+                </a>
             </div>
             <div class="item">
-                <img class="box-filmes" src="img/mini5.jpg" alt="O Hobbit" srcset="">
+                <a href="https://www.youtube.com/watch?v=_LtZVREsijQ&ab_channel=FilmIsNowMovieTrailersInternational" target="_blank">
+                <img class="box-filmes" src="img/mini5.jpg" alt="O Hobbit: A Batalha dos Cinco Exércitos Movie Poster" srcset="">
+                </a>
             </div>
             <div class="item">
+                <a href="https://www.youtube.com/watch?v=Pev38s3xPgM&ab_channel=DanielGoland" target="_blank">
                 <img class="box-filmes" src="img/mini6.jpg" alt="Breaking Bad" srcset="">
+                </a>
             </div>
             <div class="item">
-                <img class="box-filmes" src="img/mini7.jpg" alt="House" srcset="">
+                <a href="https://www.youtube.com/watch?v=dVlQJO4HZj0&ab_channel=NoobsemA%C3%87%C3%83O" target="_blank">
+                <img class="box-filmes" src="img/mini7.jpg" alt="Dr. House Poster" srcset="">
+                </a>
             </div>
             <div class="item">
-                <img class="box-filmes" src="img/mini8.jpg" alt="Supernatural" srcset="">
+                <a href="https://www.youtube.com/watch?v=CX1Wn5zkfI8&ab_channel=ScoopVideos" target="_blank">
+                <img class="box-filmes" src="img/mini8.jpg" alt="Supernatural Poster" srcset="">
+                </a>
             </div>
             <div class="item">
-                <img class="box-filmes" src="img/mini9.jpg" alt="Small Ville" srcset="">
+                <a href="https://www.youtube.com/watch?v=yBHfuph4WWY&ab_channel=rosh1temp" target="_blank">
+                <img class="box-filmes" src="img/mini9.jpg" alt="SmallVille Poster" srcset="">
+             </a>
             </div><div class="item">
-                <img class="box-filmes" src="img/mini10.jpg" alt="The Avengers - Guerra Infinita" srcset="">
+                <a href="https://www.youtube.com/watch?v=t_ULBP6V9bg&ab_channel=Ingresso.com" target="_blank">
+                <img class="box-filmes" src="img/mini10.jpg" alt="The Avengers - Guerra Infinita Movie Poster" srcset="">
+                </a>
             </div>
         </div>
     </div>
