--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -8,6 +8,13 @@
     <title>Snake Game!</title>
 </head>
 <body><!-- Desenvolvendo o jogo da cobrinha com HTML5, CSS3 e JavScript -->
+    <h1 class="titulo">
+        The Classic Snake Game!!
+    </h1>
+    <p class="instrucoes">
+        Use the arrowkeys to control the snake and eat the food.<br>
+        If the snake's head touch its own body, you lose!
+    </p>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
