--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -8,13 +8,26 @@
     <title>Snake Game!</title>
 </head>
 <body><!-- Desenvolvendo o jogo da cobrinha com HTML5, CSS3 e JavScript -->
-    <h1 class="titulo">
-        The Classic Snake Game!!
-    </h1>
-    <p class="instrucoes">
-        Use the arrowkeys to control the snake and eat the food.<br>
-        If the snake's head touch its own body, you lose!
-    </p>
-    <canvas id="snake" width="512" height="512"></canvas>
+    <div class="flex-container">
+        <div class="header">
+            <h1 class="titulo">
+            The Classic Snake Game!!
+            </h1>
+            <p class="instrucoes">
+                Use the arrowkeys to control the snake and eat the food.<br>
+                If the snake's head touch its own body, you lose!
+            </p>     
+        </div>
+        <div class="score">
+            <div class="score"><p>Score: </p></div>            
+            <div id="score">0</div>
+        </div>
+        <div class="canvas">
+            <!-- Canvas é elemento que trabalha a parte gráfica do jogo -->
+            <canvas id="snake" width="512" height="512" style="border:1px solid #000000;"></canvas>
+        </div>        
+        
+    </div>
+
 </body>
 </html>
