wireframe-to-page project
Learning to change a wireframe basic page into a CSS-basic page.

--- a/wireframe-to-page-project/index.html
+++ b/wireframe-to-page-project/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">    
-    <title>Sua Loja</title>
+    <title>André Lanches</title>
     <link href="estilo.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div id="header">
         <div id="logo">
             <img id="logoImg" src="images/logo.png">
-            <h1 id="tituloLogo">Sua Loja</h1>
+            <h1 id="tituloLogo">André Lanches</h1>
         </div>
         <div id="menu">
             <ul class="listaMenu">                
                 <li><a href="sobre.html">Sobre Nós</a></li>
-                <li><a id="menuAtual" href="index.html">Produtos</a></li>
+                <li><a id="menuAtual" href="index.html">Lanches</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </div>
@@ -22,61 +22,61 @@
     <div id="content">
         <div id="promotionBanner">
             <h1 id="promocaoH1">Promoção!</h1>
-            <h2 id="promocaoValor">SUA PROMOÇÃO AQUI</h1>
+            <h2 id="promocaoValor">X-Salada + Batata = 9,90</h1>
         </div>
         <div id="maisVendidos">
-            <h1 id="tituloConteudo">Produtos</h1>
+            <h1 id="tituloConteudo">Nossos Lanches</h1>
             <div id="areaProdutos">
                 <table>
                     <tr>
                         <td>
-                            <p class="tituloProduto">Produto</p>
-                            <img src="images/produto.jpg">                                
-                            <p class="precoProduto">Preço</p>
+                            <p class="tituloProduto">X-Salada</p>
+                            <img src="images/xsalada.jpg">                                
+                            <p class="precoProduto">R$: 8,00</p>
                         </td>
                         <td>
-                            <p class="tituloProduto">Produto</p>
-                            <img src="images/produto.jpg">                                
-                            <p class="precoProduto">Preço</p>
+                            <p class="tituloProduto">Cheddar</p>
+                            <img src="images/cheddar.jpg">                                
+                            <p class="precoProduto">R$: 17,00</p>
                         </td>
                         <td>
-                            <p class="tituloProduto">Produto</p>
-                            <img src="images/produto.jpg">                                
-                            <p class="precoProduto">Preço</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p class="tituloProduto">Produto</p>
-                            <img src="images/produto.jpg">                                
-                            <p class="precoProduto">Preço</p>
-                        </td>
-                        <td>
-                            <p class="tituloProduto">Produto</p>
-                            <img src="images/produto.jpg">                                
-                            <p class="precoProduto">Preço</p>
-                        </td>
-                        <td>
-                            <p class="tituloProduto">Produto</p>
-                            <img src="images/produto.jpg">                                
-                            <p class="precoProduto">Preço</p>
+                            <p class="tituloProduto">Batata Frita</p>
+                            <img src="images/batata.jpg">                                
+                            <p class="precoProduto">R$: 7,00</p>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <p class="tituloProduto">Produto</p>
-                            <img src="images/produto.jpg">                                
-                            <p class="precoProduto">Preço</p>
+                            <p class="tituloProduto">X-Burguer</p>
+                            <img src="images/cheese.jpg">                                
+                            <p class="precoProduto">R$: 1,50</p>
                         </td>
                         <td>
-                            <p class="tituloProduto">Produto</p>
-                            <img src="images/produto.jpg">                                
-                            <p class="precoProduto">Preço</p>
+                            <p class="tituloProduto">Big Tower</p>
+                            <img src="images/bigtower.jpg">                                
+                            <p class="precoProduto">R$: 20,50</p>
                         </td>
                         <td>
-                            <p class="tituloProduto">Produto</p>
-                            <img src="images/produto.jpg">                                
-                            <p class="precoProduto">Preço</p>
+                            <p class="tituloProduto">X-Frango</p>
+                            <img src="images/fragonrequeijao.jpg">                                
+                            <p class="precoProduto">R$: 12,90</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p class="tituloProduto">Nuggets (c/ 8)</p>
+                            <img src="images/nuggets.jpg">                                
+                            <p class="precoProduto">R$: 6,50</p>
+                        </td>
+                        <td>
+                            <p class="tituloProduto">Refri (Lata)</p>
+                            <img src="images/refri.jpg">                                
+                            <p class="precoProduto">R$: 4,50</p>
+                        </td>
+                        <td>
+                            <p class="tituloProduto">Sucos (Vários Sabores)</p>
+                            <img src="images/sucos.jpg">                                
+                            <p class="precoProduto">R$: 8,50</p>
                         </td>
                     </tr>                    
                 </table>
